[package]
name = "advent_of_code_2021"
version = "0.1.0"
authors = ["Sebastian Jegerås <jegeras@gmail.com>"]

edition = "2018"
[dependencies]
itertools = "0.8.1"
regex = "1"
image = "0.22"
rand = "0.7.2"

[dev-dependencies]
criterion = "0.3"

[[bin]]
name = "day01"
path = "day01/day01.rs"

[[bin]]
name = "day02"
path = "day02/day02.rs"

[[bin]]
name = "day03"
path = "day03/day03.rs"

[[bin]]
name = "day04"
path = "day04/day04.rs"

[[bin]]
name = "day05"
path = "day05/day05.rs"
